# dotfiles

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  WOTS_Analysis_Report.md  WOTS_Rust_Rewrite_Plan.md  install_packages.sh  justfile  linux_stow.sh  mnt2win.sh  pixi.toml  pkg_update.sh  refresh.sh  replace_tokens.sh  review_report.md  stow.sh  user_creat_stow_app.py  winuser_update.sh  wots  wots.py  wots_bin  wsl-startup.sh
.deepseek/: instructions.md
_wots/: __init__.py  __main__.py  cli.py  config.py  display.py  types.py  utils.py
android.meta/: cphrase.ini
autostarter.meta/: autostart-apps.py  autostart-apps.vbs  podman-desktop.vbs
caddyfile_on_wrt.meta/: Caddyfile
git.user/: .gitconfig
komorebi.winuser/: komorebi.json
packages.meta/: CYBER 已安装软件包.ubundle  PU-PC 已安装软件包.ubundle  UniGetPackages.ubundle  ZIONPC 已安装软件包.ubundle  npm.txt  pacman.txt  pip.txt  uv.txt  winhawk_mods.txt
potplayer.meta/: PotPlayerMini64.reg  README.md
python.user/: .condarc
scripts.meta/: Index TTS Web UI.pyw  autostart-apps.py  combine_images_horizontally.py  config_linker.py  doubao-autostart.py  git_staged_summary.sh  install-pacman-pkgs.sh  leave-all-telegram.py  md2pdf.py  pixi.toml  replace-username.sh  set_windows_time.py  split_pdf_by_toc.py  template_a4.tex  x.py
shelloracle.meta/: config.toml
wots-src/: Cargo.toml  INTEGRATION_TESTS_REPORT.md  INTEGRATION_TESTS_REPORT_CN.md  wots
wots-src/src/: cli.rs  commands.rs  config.rs  create.rs  discover.rs  display.rs  lib.rs  main.rs  sync.rs  types.rs
wots-src/tests/: integration.rs
(+174 files in other folders)
