[package]
name = "wots"
version = "1.0.0"
edition = "2024"
description = "WSL Dotfile Stow Tool — unified dotfile management for WSL, Linux, and Windows."
authors = ["Zion Pu <pu.007@qq.com>"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
walkdir = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
colored = "3"
glob = "0.3"
shellexpand = "3"
blake3 = "1"
comfy-table = "7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
